# samp-cpp

./: .gitignore  AdvancedGDK.sln  BuildConfig.lua  BuildConfig.lua.template  BuildConfig.template.lua  CMakeLists.txt  GenerateProjectFiles.bat  Premake5Build.lua  ProjectPlan.md  README.md  RebuildAll.sh  SAMP-EDGEngine.sln  SAMP-EDGEngine.sln.DotSettings  SymbolsExportList.def
.vscode-template/: c_cpp_properties.json  tasks.json
AdvancedGDK/: AdvancedGDK.sln  AdvancedGDK.vcxproj  AdvancedGDK.vcxproj.filters  AdvancedGDKPCH.cpp  AdvancedGDKPCH.hpp  stdafx.cpp  stdafx.h
Configuration/: Dependencies.props
Documents/: ProjectStrategy.md
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  EnginePCH.cpp  EnginePCH.hpp  Premake5Build.lua  TODO.md
ExampleGM/: CopyToServerPlugins.bat  ExampleGM.vcxproj  ExampleGM.vcxproj.filters  ExampleGMPCH.cpp  ExampleGMPCH.hpp  main.cpp  stdafx.cpp
Examples/: Premake5Build.lua
Extensions/: Premake5Build.lua
Premake/: ConfigurePCH.lua  Library.lua  UseSampPluginSdk.lua  WindowsSDKVersion.lua
SAMP-EDGEngine/: SAMP-EDGEngine.vcxproj  SAMP-EDGEngine.vcxproj.filters  SAMP-EDGEnginePCH.cpp
SAMP-EDGEngine-UnitTests/: SAMP-EDGEngine-UnitTests.vcxproj  SAMP-EDGEngine-UnitTests.vcxproj.filters  SAMP-EDGEngine-UnitTestsPCH.cpp  SAMP-EDGEngine-UnitTestsPCH.hpp
ServerCore/: Premake5Build.lua  ServerCore.cpp  ServerCore.vcxproj  ServerCore.vcxproj.filters  ServerCorePCH.cpp  ServerCorePCH.hpp
UnitTestMath/: UnitTestMath.cpp  UnitTestMath.vcxproj  UnitTestMath.vcxproj.filters  stdafx.cpp
UnitTests/: Premake5Build.lua  (+6 more)
(+856 files in other folders)
